# Minecraft_Launcher

./: .gitignore  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  MODPACKS_GUIDE.md  MODPACKS_WITH_MODS_GUIDE.md  README.md  TESTING.md  check_jar.js  check_natives.js  debug-launch.js  package-lock.json  package.json  test-launch.js
.github/workflows/: build.yml  release.yml
src/bridge/: index.js  package-lock.json  package.json
src/core/: binding.gyp  package-lock.json  package.json
src/core/include/: download_manager.h  java_manager.h  laucher_core.h  pack_manager.h  version_resolver.h
src/core/include/modloaders/: fabric_handler.h  forge_handler.h  universal_handler.h
src/core/src/: download_manager.cpp  java_manager.cpp  launcher_core.cpp  native_module.cpp  pack_manager.cpp  version_resolver.cpp
src/core/src/utils/: file_utils.cpp  string_utils.cpp
src/main/: main.js
src/renderer/: app.js  index.html  styles.css
src/ui/: app.js  main.js  package.json
src/utils/: archive-downloader.js  config-manager.js  forge-downloader.js  forge-installer.js  java-downloader.js  minecraft-downloader.js  minecraft-launcher.js  modloader-installer.js  mods-downloader.js
